--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,10 @@
     <footer>
         Copyright by Małgorzata Dębowska
     </footer>
+
 {#    <script src="{{ asset('js/bootstrap.js') }}"></script>#}
 {#    <script src="{{ asset('js/scripts.js') }}"></script>#}
+
+<script type="text/javascript" src="{{ url_for('static', filename='web/cards.js') }}"></script>
 </body>
 </html>
