--- a/src/templates/game_start.html
+++ b/src/templates/game_start.html
@@ -8,7 +8,7 @@
         {% endfor %}<br>
     {% endfor %}
     Lista graczy: {{ players }}
-    <a href="{{ url_for('play_human') }}" id="graj">GRAJ!</a>
+    <a href="{{ url_for('play_game') }}" id="graj">GRAJ!</a>
 {% endblock %}
 
 
