--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,7 +26,7 @@
         </section>
     {% if game_time %}
         <p class="warning">Ktoś teraz gra od {{ game_time }}. Jeśli dasz start, przerwiesz komuś grę.</p>
-        <a class="warning" href="{{ url_for('settings') }}" id="graj">Zacznij grę</a>
+        <a class="warning" href="{{ url_for('settings') }}" id="graj">Nie obchodzi mnie to - Start!</a>
     {% else %}
         <a class="" href="{{ url_for('settings') }}" id="graj">Zacznij grę</a>
     {% endif %}
