css and documentation, commend not important code

--- a/src/templates/end.html
+++ b/src/templates/end.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <p id="congratulations">Gratulacje!<br>Wygrał {{ winner }}</p>
-    <a class="" href="{{ url_for('index') }}" id="graj">Zacznij ponownie grę</a>
+    <div class="center">
+        <p id="congratulations">Gratulacje!<br>Wygrał {{ winner }}</p>
+        <a class="" href="{{ url_for('index') }}" id="graj-ponownie">Zacznij ponownie grę</a>
+    </div>
 {% endblock %}
