--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -28,7 +28,7 @@
                                 <label for="{{ from_stack }}">3</label>
                                 <input type="radio" name="from_stack" value="{{ 4 }}">
                                 <label for="{{ from_stack }}">4</label>
-                            <button type="submit">Ciągnij karty ze stosu.</button><br>
+                            <button type="submit">Ciągnij karty ze stosu</button><br>
                         </form>
                     {% endif %}
                     {% if next_label == 1 %}
@@ -46,10 +46,10 @@
             {% endif %}
              <hr>
         {% endfor %}
-        <article>
-            Lista graczy: {{ players }}
-            Aktywny player: {{ a_player }}
-        </article>
+{#        <article>#}
+{#            Lista graczy: {{ players }}#}
+{#            Aktywny player: {{ a_player }}#}
+{#        </article>#}
     </section>
     <section id="stack_cards">
     <header>
