--- a/src/static/web/style.css
+++ b/src/static/web/style.css
@@ -6,27 +6,69 @@
     display: none;
 }
 
+:root {
+    /*
+        Colors
+    */
+    --main-background-color: #363535;
+    --second-background-color: #4a487c;
+    --third-background-color: #3e3e3e;
+
+    --main-font-color: #f0f0f0;
+    --second-font-color: #d7c2e7;
+    --third-font-color: #302e51;
+}
+
 body>header{
     top:0;
-    background-color: orange;
+    background-color: var(--second-background-color);
     width: 100%;
     text-align: center;
+    padding: 0.8% 0;
 }
 
 body>footer{
-
+    padding: 0.5%;
+    margin-top: 40px;
     text-align: center;
+    background-color: var(--second-background-color);
 }
 
 body{
-    background-color: #fcfcfc;
-    font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
+    margin: 0;
+
+    color: var(--main-font-color);
+    background-color: var(--main-background-color);
+    /*background-color: #fcfcfc;*/
+
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
+    /*font-family: 'Consolas', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;*/
+}
+
+a{
+    color: var(--second-font-color);
+    text-decoration: none;
+}
+
+hr{
+    border: none;
+    background-color: var(--main-background-color);
+    height: 1px;
+}
+
+.inside-width{
+    width: 70%;
+    margin-left: 15%;
+}
+
+.center{
+    text-align: center;
 }
 
 .card{
     width: 70px;
     border: 1px solid #777777;
-    border-radius: 7px;
+    border-radius: 9%;
 }
 
 .checked{
@@ -41,25 +83,55 @@ body{
     margin-right: -20px;
 }
 
-#graj{
+button{
+    padding: 5px;
+    border-radius: 6px;
+    background-color: var(--second-background-color);
+    text-decoration: none;
+    color: var(--second-font-color);
+    font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace;
+    border: 1px solid var(--third-font-color);
+    cursor: pointer;
+}
+
+#zacznij{
     padding: 10px;
     border-radius: 10px;
-    background-color: orange;
+    background-color: var(--second-background-color);
     text-decoration: none;
-
-    /*position: absolute;*/
-    left: 47%;
-    top: 49%;
 }
+
+#graj, #graj-ponownie{
+
+    background-color: var(--second-background-color);
+    position: absolute;
+    border-radius: 60px;
+    padding: 30px;
+    left: calc(50% - 51px);
+    top: 45%;
+    transition:0.3s cubic-bezier(0.165, 0.840, 0.440, 1.000);
+}
+
+#graj-ponownie{
+    position: initial!important;
+    display: inline-block;
+}
+
+#graj:hover, #graj-ponownie:hover{
+    transform: scale(1.2);
+    filter:brightness(1.1);
+}
+
 p.warning{
     color: red;
     font-weight: bold;
 }
 a.warning{
-    background-color: red!important;
+    background-color: #d50000!important;
     padding: 5px;
     font-size: 0.8em;
     font-weight: bold;
+    color: var(--main-font-color);
 }
 
 article{
@@ -69,9 +141,10 @@ article{
 section#players_cards{
     float: left;
     width: 65%;
-
+    padding-left: 1%;
     padding-right: 2%;
-    background-color: #f5f5f5;
+    background-color: var(--third-background-color);;
+    /*background-color: #f5f5f5;*/
 
 }
 
