--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
             </section>
             <section>
                 <header><h3>Start</h3></header>
-                <p>Na starcie karty są równo rozdane pomiędzy graczami. Rozpoczyna gracz posiadający kartę 9 serce (którą od razu wykłada).</p>
+                <p>Na starcie karty są równo rozdane pomiędzy graczami. Rozpoczyna gracz posiadający kartę 9 serce (która jest automatycznie wyłożona).</p>
             </section>
             <section>
                 <header><h3>Przebieg i zasady rozgrywki</h3></header>
@@ -23,6 +23,14 @@
                     <li>Na stole zawsze musi zostać jedna karta (9 serce)</li>
                     <li>Jeśli gracz posiada 3 lub 4 karty z tą samą figurą, może je wyłożyć w jednej kolejce.</li>
                     <li>Jeśli zostanie wyłożona karta w kolorze wina kolejka przechodzi na poprzedniego gracza.</li>
+                </ul>
+            </section>
+            <section>
+                <header><h3>Znaczenie przycisków</h3></header>
+                <ul>
+                    <li>Zagraj <i class="fa">&#xf0da;</i> : zaznaczone karty rzuć na stos.</li>
+                    <li>Na koniec <i class="material-icons">&#xe5dd;</i> : zaznaczoną kartę ustaw na końcu, by móc sterować kolejnością rzucanych kart.</li>
+                    <li>Ciągnij <i class="fa">&#xf107;</i> : ciągnij karty ze stosu.</li>
                 </ul>
             </section>
             {% if game_time %}
