--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,8 +7,11 @@
     <meta name="author" content="Małgorzata Dębowska">
     <link rel="stylesheet" type="text/css" href="../static/web/style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
     <header>
