--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -14,11 +14,11 @@
                             <input type="checkbox" name="card" value="{{ i }}" id="{{ i }}" class="hidden">
                             {% set card_url = player.hand[i].url %}
                             {% set card_id = 'card' +  i | string %}
-{#                            {% if card_useful[i] %}#}
+                            {% if card_useful[i] %}
                                 <label for="{{ card }}"><img src="{{ url_for('static', filename='web/images/'+card_url)}}" onclick="Toggle_card('{{ i }}')" class="card" id="{{ card_id }}"/></label>
-{#                            {% else %}#}
-{#                                <label for="{{ card }}"><img src="{{ url_for('static', filename='web/images/'+card_url)}}" style="filter: brightness(0.8)" onclick="Toggle_card('{{ i }}')" class="card" id="{{ card_id }}"/></label>#}
-{#                            {% endif %}#}
+                            {% else %}
+                                <label for="{{ card }}"><img src="{{ url_for('static', filename='web/images/'+card_url)}}" onclick="Toggle_card('{{ i }}')" class="card unuseful" id="{{ card_id }}"/></label>
+                            {% endif %}
                         {% endfor %}
                         <br><button type="submit">Zagraj <i class="fa">&#xf0da;</i></button>
                     </form>
